card overlap Fix

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 *{
     margin: 0;
     padding: 0;
-    /* border: 2px solid red; */
+    /* border: 1px solid red; */
 }
 
 body{
@@ -36,7 +36,7 @@ body{
     grid-column: 2/3;
     grid-row-end: span 7;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 380px));
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     gap: 15px 15px;
     padding: 15px;
 }
@@ -210,8 +210,9 @@ button{
     display: flex;
     flex-direction: column;
     height: 160px;
-    max-width: 400px;
-    min-width: 220px;
+    /* max-width: 300px; */
+    max-height: 200px;
+    max-width: 350px;
     background-color: white;
 }
 
